# backend-nomad-airbnb

./: .gitignore  README.md  prettier.config.mjs  pyproject.toml
.claude/skills/django-ninja-crud/: SKILL.md
.claude/skills/django-pyright-setup/: SKILL.md
bookings/: admin.py  models.py
bookings/migrations/: 0001_initial.py  0002_rename_experiences_booking_experience.py  0003_alter_booking_experience_alter_booking_room_and_more.py
categories/: models.py  schemas.py  serializers.py  services.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
config/: settings.py  urls.py
direct_messages/: admin.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_chattingroom_participants.py  0003_alter_message_room_alter_message_user.py
experiences/: admin.py  models.py  schemas.py  services.py  views.py
experiences/migrations/: 0001_initial.py  0002_remove_perk_detail_perk_details.py  0003_experience_category.py  0004_alter_experience_category_alter_experience_host.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_house_pets_allowed.py  0002_initial.py  0003_alter_house_pets_allowed.py
medias/: models.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_room_and_more.py
reviews/: admin.py  models.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
reviews/templates/: all_rooms.html
rooms/: admin.py  models.py  schemas.py  services.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_room_name_alter_amenity_description.py  0003_alter_amenity_options.py  0004_room_category.py  0005_alter_room_category_alter_room_owner.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar.py  0002_user_is_host_user_name_alter_user_first_name_and_more.py
wishlists/: admin.py  models.py
wishlists/migrations/: 0001_initial.py  0002_alter_wishlist_user.py
